# CPP

./: CMakeLists.txt  TudoJunto.cpp  calculadoraIMC.cpp  ele.e.primo.cpp  funçãosomarvetor.cpp  gestãoacademico.cpp  gestãoacademico2.cpp  idade.cpp  imprimindomatrizes.cpp  main.cpp  manipulandovetor.cpp  nomesidade.cpp  nota.cpp  números_pares.cpp  somarmatrizes.cpp  tabuada.cpp  vetor.cpp
