cmake_minimum_required(VERSION 3.10.0)
project(wellinton VERSION 0.1.0 LANGUAGES C CXX)

add_executable(wellinton somarmatrizes.cpp) 


#add_executable(wellinton funçãosomarvetor.cpp) 

#add_executable(wellinton imprimindomatrizes.cpp) 

#add_executable(wellinton manipulandovetor.cpp) 

#add_executable(wellinton gestãoacademico2.cpp) 

#add_executable(wellinton calculadoraIMC.cpp) 

#add_executable(wellinton nomesidade.cpp) 

#add_executable(wellinton vetor.cpp) 

#add_executable(wellinton Tudojunto.cpp) 

#add_executable(wellinton ele.e.primo.cpp) 

#add_executable(wellinton numeroprimo.cpp)

#add_executable(wellinton números_pares.cpp)

#add_executable(wellinton tabuada.cpp)

#add_executable(wellinton numero1.10.cpp)

#add_executable(wellinton idade.cpp)

#add_executable(wellinton main.cpp)

